--- a/package.json
+++ b/package.json
@@ -97,35 +97,33 @@
   "devDependencies": {
     "@pinia/testing": "^0.1.7",
     "@testing-library/vue": "^8.1.0",
-    "@types/lodash": "^4.14.196",
-    "@types/node": "^24.2.1",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
-    "@unhead/addons": "^1.9.16",
-    "@vitejs/plugin-vue": "^5.1.2",
-    "@vitest/coverage-istanbul": "^2.0.5",
-    "cypress": "^14.4.1",
-    "cypress-real-events": "^1.14.0",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-vue": "^9.18.1",
-    "firebase-admin": "^13.4.0",
-    "firebase-tools": "^13.12.0",
-    "happy-dom": "^14.12.3",
-    "husky": "^9.1.6",
-    "nanoid": "^5.0.7",
-    "prettier": "3.0.3",
-    "sass": "^1.50.1",
-    "typescript": "^5.9.2",
-    "vite": "^5.4.2",
+    "@types/lodash": "^4.17.23",
+    "@types/node": "^25.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
+    "@unhead/addons": "^2.1.2",
+    "@vitejs/plugin-vue": "^6.0.3",
+    "@vitest/coverage-istanbul": "^4.0.18",
+    "cypress": "^15.9.0",
+    "cypress-real-events": "^1.15.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.5",
+    "eslint-plugin-vue": "^10.7.0",
+    "happy-dom": "^20.4.0",
+    "husky": "^9.1.7",
+    "nanoid": "^5.1.6",
+    "prettier": "^3.8.1",
+    "sass": "^1.97.3",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1",
     "vite-plugin-favicons-inject": "^2.2.0",
-    "vite-plugin-mkcert": "^1.17.5",
-    "vite-plugin-node-polyfills": "^0.22.0",
-    "vitest": "^2.0.5",
-    "workbox-build": "^7.1.1",
-    "workbox-core": "^7.1.0",
-    "workbox-routing": "^7.1.0",
-    "workbox-strategies": "^7.1.0"
+    "vite-plugin-mkcert": "^1.17.9",
+    "vitest": "^4.0.18",
+    "vue-eslint-parser": "^10.2.0",
+    "workbox-build": "^7.4.0",
+    "workbox-core": "^7.4.0",
+    "workbox-routing": "^7.4.0",
+    "workbox-strategies": "^7.4.0"
   }
 }
